# Cashtak

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Cashatak.sln  README.md  hash_password  plan.md
Cashatak/: Account.cpp  Account.h  Admin.cpp  Admin.h  Business.cpp  Cashatak.cpp  Cashatak.h  Cashatak.vcxproj  Cashatak.vcxproj.filters  Database.cpp  Database.h  Event.cpp  Event.h  Notification.cpp  Notification.h  NotificationManager.cpp  NotificationManager.h  PaymentRequest.cpp  PaymentRequest.h  RCa16072  Request.cpp  Request.h  Transaction.cpp  Transaction.h  User.cpp  User.h  main.cpp
src/: main.cpp
src/core/: Account.cpp  Account.h  Admin.cpp  Admin.h  Database.cpp  Database.h  Notification.cpp  Notification.h  NotificationManager.cpp  NotificationManager.h  PaymentRequest.cpp  Transaction.cpp  User.cpp  User.h
src/resources/: Cashatak.qrc  style.qss
src/resources/Data/: Admins.txt  CompletedTransactions.txt  Users.txt  pendingOutgoingRequests.txt
src/ui/dialogs/: TransactionsDialog.cpp  TransactionsDialog.h
src/ui/views/: AdminPage.cpp  AdminPage.h  AdminPage.ui  HomePage.cpp  HomePage.h  HomePage.ui  LoginPage.cpp  LoginPage.h  LoginPage.ui  RegisterPage.cpp  RegisterPage.h  RegisterPage.ui  RequestMoney.cpp  RequestMoney.h  RequestMoney.ui  SendMoneyPage.cpp  SendMoneyPage.h  SendMoneyPage.ui  SendPaymentRequestPage.cpp  SendPaymentRequestPage.h  SendPaymentRequestPage.ui  TransactionsHistoryPage.cpp  TransactionsHistoryPage.h  TransactionsHistoryPage.ui
src/ui/windows/: CashatakMainWindow.cpp  CashatakMainWindow.h  CashatakMainWindow.ui
